--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -78,29 +78,12 @@
       <div class="row">
         <div class="col-md-4">
           <label class="fw-medium">Kế hoạch</label>
-          <p-dropdown
-            [options]="issueDropDowns"
-            [(ngModel)]="currentIssueSelected"
-            optionLabel="issueName"
-            [filter]="true"
-            filterBy="issueName"
-            [showClear]="true"
-            placeholder="Chọn 1 kế hoạch kiểm tra"
-            (onChange)="loadDocuments()"
+          <p-dropdown class="full-width-dropdown" [options]="issueDropDowns" dataKey="issueId"
+                      [(ngModel)]="currentIssueSelected"    optionLabel="issueName"
+                      [filter]="true" filterBy="issueName" optionValue="issueId" [showClear]="true"
+                      (onChange)="loadDocuments()"
+                      placeholder="Chọn 1 kế hoạch thanh tra"
           >
-            <ng-template pTemplate="selectedItem">
-              <div
-                class="flex align-items-center gap-2"
-                *ngIf="currentIssueSelected"
-              >
-                <div>{{ currentIssueSelected.issueName }}</div>
-              </div>
-            </ng-template>
-            <ng-template let-issue pTemplate="item">
-              <div class="flex align-items-center gap-2">
-                <div>{{ issue.issueName }}</div>
-              </div>
-            </ng-template>
           </p-dropdown>
         </div>
         <div class="col-md-4" *ngIf="!isPrincipal">
