--- a/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
+++ b/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
@@ -13,10 +13,10 @@
   </div>
   <div *ngIf="completed" class="d-flex flex-column justify-content-center align-items-center mt-5">
     <i class="bi bi-check-circle-fill icon"></i>
-    <p class="mt-4 icon-text fw-medium">{{complete}}</p>
+    <p class="mt-4 icon-text fw-medium mt-3">{{complete}}</p>
   </div>
   <div *ngIf="failed" class="d-flex flex-column justify-content-center align-items-center mt-5">
     <i class="bi bi-x-circle-fill icon"></i>
-    <p class="mt-4 icon-text fw-medium">{{fail}}</p>
+    <p class="mt-4 icon-text fw-medium mt-3">{{fail}}</p>
   </div>
 </p-dialog>
