--- a/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
@@ -18,7 +18,6 @@
 <div class="container-fluid">
   <h5 class="mat-headline-5 fw-medium">Chi tiết quyết định kiểm tra</h5>
   <div class="row inspection-plan-detail">
-    <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
     <div class="row">
       <div
         class="form-content col-md-8 d-flex flex-column justify-content-between"
@@ -87,7 +86,7 @@
             </p-tag>
           </div>
         </div>
-        <h5 class="mb-2">Tài liệu công văn</h5>
+        <h6 class="mat-headline-6 mb-1">Tài liệu công văn</h6>
         <div
           class="file-item py-1 d-flex"
           (click)="
