--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right" key="updateInspectionPlan"></p-toast>
 <p-confirmDialog
   [style]="{width: '50vw'}"
   acceptLabel="Xác nhận"
@@ -27,6 +28,16 @@
   (selectedInspectorsList)="getInspectorIds($event)"
   [inspectorListIsValid]="inspectorListIsValid"
 ></app-inspection-plan-inspector-popup>
+<app-loading-complete-dialog
+  [visible]="updateLoadingVisibility"
+  [completed]="updateComplete"
+  [failed]="updateFailed"
+  [header]="'Cập nhật quyết định kiểm tra'"
+  [progress]="'Đang cập nhật quyết định kiểm tra'"
+  [complete]="'Cập nhật quyết định kiểm tra thành công'"
+  [fail]="'Cập nhật quyết định kiểm tra không thành công'"
+>
+</app-loading-complete-dialog>
 <div class="container-fluid">
   <h5 class="mat-headline-5 fw-medium">Cập nhật quyết định kiểm tra</h5>
   <div class="row update-inspection-plan">
@@ -67,28 +78,7 @@
             </span>
           </div>
         </div>
-        <div class="inspection-plan-school mb-3 row">
-          <div class="col-md-6 mb-2">
-            <label class="fw-medium mb-1">Trường kiểm tra</label>
-            <select title="schoolList" class="form-select" disabled>
-              <option selected value="0">{{inspectionPlanDetail?.inspectionPlan?.school?.schoolName}}</option>
-            </select>
-          </div>
-          <div class="col-md-6 mb-2">
-            <label class="fw-medium mb-1">Trưởng đoàn kiểm tra<span class="p-error">*</span></label>
-            <p-dropdown class="full-width-dropdown" [options]="eligibleChiefList" dataKey="user.userId"
-                        formControlName="chiefId" optionLabel="user.fullName"
-                        [filter]="true" filterBy="user.fullName" optionValue="user.userId" [showClear]="true">
-            </p-dropdown>
-            <div
-              *ngIf="inspectionPlanForm.controls?.['chiefId']?.invalid && (inspectionPlanForm.controls?.['chiefId']?.touched ||inspectionPlanForm.controls?.['chiefId']?.dirty)">
-            <span *ngIf="inspectionPlanForm.controls?.['chiefId']?.errors?.['required']" class="p-error">
-              Vui lòng chọn trưởng đoàn kiểm tra
-            </span>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-3">
+        <div class="row mb-2">
           <div class="col-md-6 mb-2">
             <label class="fw-medium mb-1">Ngày bắt đầu<span class="p-error">*</span></label>
             <tui-input-date
@@ -110,6 +100,27 @@
             </tui-input-date>
           </div>
         </div>
+        <div class="inspection-plan-school mb-2 row">
+          <div class="col-md-6 mb-2">
+            <label class="fw-medium mb-1">Trường kiểm tra</label>
+            <select title="schoolList" class="form-select" disabled>
+              <option selected value="0">{{inspectionPlanDetail?.inspectionPlan?.school?.schoolName}}</option>
+            </select>
+          </div>
+          <div class="col-md-6 mb-2" *ngIf="inspectionPlanForm.controls?.['inspectorIds']?.valid">
+            <label class="fw-medium mb-1">Trưởng đoàn kiểm tra<span class="p-error">*</span></label>
+            <p-dropdown class="full-width-dropdown" [options]="eligibleChiefList" dataKey="user.userId"
+                        formControlName="chiefId" optionLabel="user.fullName"
+                        [filter]="true" filterBy="user.fullName" optionValue="user.userId" [showClear]="true">
+            </p-dropdown>
+            <div
+              *ngIf="inspectionPlanForm.controls?.['chiefId']?.invalid && (inspectionPlanForm.controls?.['chiefId']?.touched ||inspectionPlanForm.controls?.['chiefId']?.dirty)">
+            <span *ngIf="inspectionPlanForm.controls?.['chiefId']?.errors?.['required']" class="p-error">
+              Vui lòng chọn trưởng đoàn kiểm tra
+            </span>
+            </div>
+          </div>
+        </div>
         <div>
           <h6 class="mat-headline-6 fw-medium mb-1">Tài liệu công văn</h6>
           <div class="file-item py-1 d-flex"
@@ -120,29 +131,28 @@
             <div class="row col-md-10 d-flex align-items-end mb-3">
               <div class="col-md-8">
                 <p class="mb-0">
-                  <span>Tên tài liệu: </span>
-                  <span class="fw-bold">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentName}}</span>
+                  <span class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentName}}</span>
                 </p>
                 <p class="mb-0">
                   <span>Loại tài liệu: </span>
                   <span
-                    class="fw-bold">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentType.documentTypeName}}</span>
+                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentType.documentTypeName}}</span>
                 </p>
                 <p class="mb-0">
                   <span>Mã tài liệu: </span>
-                  <span class="fw-bold">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentCode}}</span>
+                  <span class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentCode}}</span>
                 </p>
               </div>
               <div class="col-md-4 text-end">
                 <p class="mb-0">
                   <span>Kích thước: </span>
                   <span
-                    class="fw-bold">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.size  | fileSizePipe:'MB' }}</span>
+                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.size  | fileSizePipe:'MB' }}</span>
                 </p>
                 <p class="mb-0">
                   <span>Ngày tạo: </span>
                   <span
-                    class="fw-bold">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.uploadedDate | date : "MM/dd/yyyy" }}</span>
+                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.uploadedDate | date : "MM/dd/yyyy" }}</span>
               </div>
             </div>
           </div>
@@ -181,14 +191,17 @@
                     placeholder="Điền mã tài liệu"
                     formControlName="documentCode"
                   />
+                  <div *ngIf="duplicateDocumentCode">
+                    <span class="p-error">Mã tài liệu trùng lặp</span>
+                  </div>
                   <div class="mt-1"
                        *ngIf="documentUpdated && documentCodeControls?.invalid && (documentCodeControls?.touched || documentCodeControls?.dirty)">
-                <span *ngIf="documentUpdated && documentCodeControls?.errors?.['required']" class="p-error">
-                  Vui lòng điền mã tài liệu
-                </span>
+                    <span *ngIf="documentUpdated && documentCodeControls?.errors?.['required']" class="p-error">
+                      Vui lòng điền mã tài liệu
+                    </span>
                     <span *ngIf="documentUpdated && documentCodeControls?.errors?.['maxlength']" class="p-error">
-                  Mã tài liệu quá dài
-                </span>
+                      Mã tài liệu quá dài
+                    </span>
                   </div>
                 </div>
               </div>
@@ -219,16 +232,16 @@
                 </div>
               </div>
             </ng-template>
-            <div class="close-document-update d-flex justify-content-center">
+            <div class="close-document-update d-flex justify-content-center mt-2">
               <button type="button" class="w-100" (click)="changeDocumentUpdate()">
-                <i class="bi bi-x-circle"></i>
+                <i class="bi bi-chevron-up"></i>
               </button>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4 d-flex align-items-start">
-        <app-inspection-plan-inspector-list class="w-100"
+        <app-inspection-plan-inspector-list class="w-100 h-100"
                                             (toggleIssueListPopup)="changeInspectorVisible()"
                                             [listEditable]="true"
                                             [selectedInspectors]="inspectorList"
@@ -237,10 +250,21 @@
                                             [chiefList]="chiefList"
                                             (recreateInspectorList)="resetInspectorList()"
         ></app-inspection-plan-inspector-list>
+        <div
+          class="mt-1"
+          *ngIf="inspectionPlanForm.controls?.['inspectorIds']?.invalid && (inspectionPlanForm.controls?.['inspectorIds']?.touched ||inspectionPlanForm.controls?.['inspectorIds']?.dirty)"
+        >
+          <span
+            *ngIf="inspectionPlanForm.controls?.['inspectorIds']?.errors?.['required']"
+            class="p-error"
+          >
+            Vui lòng chọn danh sách đoàn kiểm tra
+          </span>
+        </div>
       </div>
       <div class="mt-5 row w-100 mb-3">
         <div class="col-12 save-button d-flex w-100 justify-content-center">
-          <button type="submit" class="btn text-white">Cập nhật</button>
+          <button type="submit" class="btn text-white">Cập nhật quyết định</button>
         </div>
       </div>
     </form>
