--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -35,30 +35,12 @@
         </div>
         <div class="col-md-6">
           <label class="fw-medium">Kế hoạch</label>
-          <p-dropdown
-            class="w-100"
-            [options]="issueDropDowns"
-            [(ngModel)]="currentIssueSelected"
-            optionLabel="issueName"
-            [filter]="true"
-            filterBy="issueName"
-            [showClear]="true"
-            placeholder="Chọn 1 kế hoạch kiểm tra"
-            (onChange)="loadGuidanceDocuments()"
+          <p-dropdown class="full-width-dropdown" [options]="issueDropDowns" dataKey="issueId"
+                      [(ngModel)]="currentIssueSelected"    optionLabel="issueName"
+                      [filter]="true" filterBy="issueName" optionValue="issueId" [showClear]="true"
+                      (onChange)="loadGuidanceDocuments()"
+                      placeholder="Chọn 1 kế hoạch thanh tra"
           >
-            <ng-template pTemplate="selectedItem">
-              <div
-                class="flex align-items-center gap-2"
-                *ngIf="currentIssueSelected"
-              >
-                <div>{{ currentIssueSelected.issueName }}</div>
-              </div>
-            </ng-template>
-            <ng-template let-issue pTemplate="item">
-              <div class="flex align-items-center gap-2">
-                <div>{{ issue.issueName }}</div>
-              </div>
-            </ng-template>
           </p-dropdown>
         </div>
       </div>
@@ -82,7 +64,6 @@
             class="tui-date"
             tuiTextfieldSize="m"
             [(ngModel)]="createDateRange"
-            (durationchange)="changeStartDate()"
             (ngModelChange)="changeStartDate()"
 
           >
