--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.html
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.html
@@ -21,27 +21,23 @@
   </div>
   <div class="row col-md-10 d-flex align-items-end mb-3">
     <div class="col-md-8">
-      <p class="mb-0">
-        <span>Tên tài liệu: </span>
-        <span class="fw-bold">{{ document.documentName}}</span>
+      <label pTooltip="{{document.documentName}}" tooltipPosition="top"
+             class="fw-medium w-100 overflow-text">{{ document.documentName}} {{ document.documentName}}</label>
+      <p class="mb-0 w-100">
+        <label pTooltip="{{document.documentType.documentTypeName}}" tooltipPosition="right" class="fw-medium w-100 overflow-text"> <span class="fw-normal">Loại tài liệu: </span>{{ document.documentType.documentTypeName}}</label>
       </p>
-      <p class="mb-0">
-        <span>Loại tài liệu: </span>
-        <span class="fw-bold">{{ document.documentType.documentTypeName}}</span>
-      </p>
-      <p class="mb-0">
-        <span>Mã tài liệu: </span>
-        <span class="fw-bold">{{ document.documentCode}}</span>
+      <p class="mb-0 w-100">
+        <label pTooltip="{{document.documentCode}}" tooltipPosition="bottom" class="fw-medium w-100 overflow-text"><span class="fw-normal">Mã tài liệu: </span> {{ document.documentCode}}</label>
       </p>
     </div>
     <div class="col-md-4 text-end">
       <p class="mb-0">
         <span>Kích thước: </span>
-        <span class="fw-bold">{{ document.size  | fileSizePipe:'MB' }}</span>
+        <span class="fw-medium">{{ document.size  | fileSizePipe:'MB' }}</span>
       </p>
       <p class="mb-0">
         <span>Ngày tạo: </span>
-        <span class="fw-bold">{{ document.uploadedDate | date : "dd/MM/yyyy" }}</span>
+        <span class="fw-medium">{{ document.uploadedDate | date : "dd/MM/yyyy" }}</span>
     </div>
   </div>
 </div>
