--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.scss
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.scss
@@ -1,6 +1,8 @@
 @import "../../../../../../assets/scss/base";
 
 .file-item {
+
+
   background-color: #f9fafb;
   border-radius: 10px;
   font-size: 16px;
@@ -13,7 +15,10 @@
     }
   }
 
-  .file-item-content {
+  .overflow-text{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &:hover {
