--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -132,29 +132,23 @@
             </div>
             <div class="row col-md-10 d-flex align-items-end mb-3">
               <div class="col-md-8">
-                <p class="mb-0">
-                  <span class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentName}}</span>
+                <label class="fw-medium w-100 overflow-text" pTooltip="{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentName}}.{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.fileExtension}}" tooltipPosition="top">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentName}}.{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.fileExtension}}</label>
+                <p class="mb-0 w-100">
+                  <label pTooltip="{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentType.documentTypeName}}"  tooltipPosition="right"
+                    class="fw-medium w-100 overflow-text"><span class="fw-normal">Loại tài liệu: </span>{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentType.documentTypeName}}</label>
                 </p>
-                <p class="mb-0">
-                  <span>Loại tài liệu: </span>
-                  <span
-                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentType.documentTypeName}}</span>
-                </p>
-                <p class="mb-0">
-                  <span>Mã tài liệu: </span>
-                  <span class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentCode}}</span>
+                <p class="mb-0 w-100">
+                  <label class="fw-medium w-100 overflow-text"><span class="fw-normal">Mã tài liệu: </span>{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.documentCode}}</label>
                 </p>
               </div>
               <div class="col-md-4 text-end">
                 <p class="mb-0">
-                  <span>Kích thước: </span>
-                  <span
-                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.size  | fileSizePipe:'MB' }}</span>
+                  <label
+                    class="fw-medium"><span class="fw-normal">Kích thước: </span>{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.size  | fileSizePipe:'MB' }}</label>
                 </p>
                 <p class="mb-0">
-                  <span>Ngày tạo: </span>
-                  <span
-                    class="fw-medium">{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.uploadedDate | date : "MM/dd/yyyy" }}</span>
+                  <label
+                    class="fw-medium"><span class="fw-normal">Ngày tạo: </span>{{ inspectionPlanDetail?.inspectionPlan?.documents[0]?.uploadedDate | date : "MM/dd/yyyy" }}</label>
               </div>
             </div>
           </div>
