--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.scss
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.scss
@@ -60,7 +60,10 @@
     }
   }
 
-  .file-item-content {
+  .overflow-text{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &:hover {
