--- a/src/app/features/post-login/inspection/inspection.component.html
+++ b/src/app/features/post-login/inspection/inspection.component.html
@@ -1,2 +1,4 @@
-<p-tabMenu class="mb-2" [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
+<div class="container-fluid">
+  <p-tabMenu class="mb-2" [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
+</div>
 <router-outlet></router-outlet>
