--- a/src/app/features/post-login/inspection/record/create-record/create-record.component.html
+++ b/src/app/features/post-login/inspection/record/create-record/create-record.component.html
@@ -1,6 +1,6 @@
 <p-toast position="top-right" key="createRecordError"></p-toast>
 <p-toast position="top-right" key="createRecordComplete"></p-toast>
-<p-dialog header="Danh sách đoàn kiểm tra"
+<p-dialog header="Tạo mới mục kiểm tra"
           [(visible)]="createRecordPopupVisible"
           [modal]="true"
           [style]="{ width: '60%' }"
