--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.html
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.html
@@ -47,6 +47,6 @@
 <ng-template #documentEmpty>
   <div class="file-item-empty mt-2 py-3 d-flex flex-column justify-content-around align-items-center">
     <i class="bi bi-file-earmark-x-fill"></i>
-    <p class="fw-bolder mt-2">Tài liệu hiện đang không tồn tại</p>
+    <p class="fw-medium mt-2">Tài liệu hiện đang không tồn tại</p>
   </div>
 </ng-template>
